design: 관리자 로딩 gif 추가

--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -7,9 +7,9 @@
 <div class="theme-loader">
     <div class="ball-scale">
         <div class="contain">
-            <div class="ring">
+            <div class="">
                 <div class="frame">
-                    <img class="loadingImg" src="/files/assets/images/loading.png" alt="">
+                    <img style="width:80px; height:80px;" src="/files/assets/images/Loding_360x360.gif" alt="">
                 </div>
             </div>
         </div>
