--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -89,7 +89,7 @@
           </ul>
         </li>-->
         <li class="">
-          <a href="javascript:void(0)">
+          <a href="/admin/dormant-members/view">
             <span class="pcoded-micon"><i class="feather icon-menu"></i></span>
             <span class="pcoded-mtext">휴면회원관리</span>
           </a>
