--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -1,3 +1,4 @@
+@import "admin-tab.css";
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
 body {
@@ -175,32 +176,6 @@ input[type=radio]:checked ~ .helper::before {
 .btn-primary:hover, .btn-primary:focus {
     background-color: #FF6200 !important;
     border-color: #FF6200 !important;
-}
-
-.nav-tabs .slide {
-    height: 2px;
-}
-
-.md-tabs .nav-item a {
-    padding: 10px 0 !important;
-}
-
-.nav-tabs {
-    flex-wrap: nowrap;
-}
-
-.md-tabs .nav-item {
-    width: 100%;
-}
-
-.nav-tabs .slide {
-    width: inherit;
-    position: relative;
-}
-
-.nav-main {
-    margin-left: 2rem;
-    width: 30%;
 }
 
 .file-open-btn {
