--- a/module-admin/src/main/resources/templates/member/entrypoint.html
+++ b/module-admin/src/main/resources/templates/member/entrypoint.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <div class="card-header p-b-0">
+<div class="col-12">
+    <div class="card tab-card">
         <ul class="nav nav-tabs md-tabs" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" data-bs-toggle="tab" role="tab" id="memberInfoTab" aria-selected="false">회원정보</a>
@@ -14,7 +14,7 @@
                 <div class="slide"></div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" role="tab" id="reportTab"  aria-selected="false">신고</a>
+                <a class="nav-link" data-bs-toggle="tab" role="tab" id="reportTab" aria-selected="false">신고</a>
                 <div class="slide"></div>
             </li>
             <li class="nav-item">
@@ -23,6 +23,9 @@
             </li>
         </ul>
     </div>
+</div>
+
+<div class="card">
     <div class="card-block">
         <div class="tab-content " id="tabContentArea">
         </div>
