--- a/module-admin/src/main/resources/templates/member/tab/block.html
+++ b/module-admin/src/main/resources/templates/member/tab/block.html
@@ -2,17 +2,19 @@
     <h3 class="sub-title"><strong>차단</strong></h3>
 </div>
 <div class="card-block-small p-t-0">
-    <table id="blockTable" class="display" style="width:100%">
-        <thead>
-        <tr>
-            <th>차단유형</th>
-            <th>차단상대 </th>
-            <th>차단일시</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table id="blockTable" class="display" style="width:100%">
+            <thead>
+            <tr>
+                <th>차단유형</th>
+                <th>차단상대 </th>
+                <th>차단일시</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <script th:inline="javascript">
