--- a/module-admin/src/main/resources/templates/member/tab/report.html
+++ b/module-admin/src/main/resources/templates/member/tab/report.html
@@ -2,19 +2,21 @@
     <h3 class="sub-title"><strong>신고</strong></h3>
 </div>
 <div class="card-block-small p-t-0">
-    <table id="reportTable" class="display" style="width:100%">
-        <thead>
-        <tr>
-            <th>내용</th>
-            <th>신고자</th>
-            <th>신고유형</th>
-            <th>내용</th>
-            <th>신고일시</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table id="reportTable" class="display" style="width:100%">
+            <thead>
+            <tr>
+                <th>내용</th>
+                <th>신고자</th>
+                <th>신고유형</th>
+                <th>내용</th>
+                <th>신고일시</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <div class="modal fade" id="reportPopup">
