--- a/module-admin/src/main/resources/templates/roles/view.html
+++ b/module-admin/src/main/resources/templates/roles/view.html
@@ -5,25 +5,28 @@
 
 <div layout:fragment="content">
     <div class="page-body">
+        <div class="col-12">
+            <div class="card tab-card">
+                <ul class="nav nav-tabs md-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-bs-toggle="tab" role="tab" id="roleTab" aria-selected="false">역할 등록</a>
+                        <div class="slide"></div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" role="tab" id="userTab" aria-selected="false">사용자 매핑</a>
+                        <div class="slide"></div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" role="tab" id="resourceTab" aria-selected="true">자원 매핑</a>
+                        <div class="slide"></div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-header p-b-0">
-                        <ul class="nav nav-tabs md-tabs" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link active" data-bs-toggle="tab" role="tab" id="roleTab" aria-selected="false">역할 등록</a>
-                                <div class="slide"></div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="tab" role="tab" id="userTab" aria-selected="false">사용자 매핑</a>
-                                <div class="slide"></div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="tab" role="tab" id="resourceTab" aria-selected="true">자원 매핑</a>
-                                <div class="slide"></div>
-                            </li>
-                        </ul>
-                    </div>
                     <div class="card-block-small">
                         <div class="row m-b-30">
                             <div class="col-lg-12">
